--- a/HUGO/config.toml
+++ b/HUGO/config.toml
@@ -32,8 +32,8 @@ defaultContentLanguageInSubdir = false
   # phone = "+9843692080"
   # skype = ""
   # telegram = ""
-  ghavatar = "https://avatars1.githubusercontent.com/u/31313881?v=4"
-
+  editURL = "https://github.com/csitauthority/csitauthority.github.io/tree/master/HUGO/content/"
+  editURLtext = "Edit this page"
 
   # Enable Keybase in Contact section by entering your keybase.io username.
   keybase = ""
