--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "HUGO/themes"]
-	path = HUGO/themes
+[submodule "HUGO/themes/csitauthority-academic"]
+	path = HUGO/themes/csitauthority-academic
 	url = https://github.com/csitauthority/csitauthority-academic.git
